@@ -53,7 +53,7 @@
       	font-style: normal;
       }
     </style>
-    <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/application-f5ffeca01e.css">
+    <link rel="stylesheet" href="{{ base_url }}/assets/stylesheets/application-eaf860cca2.css">
     {% if config.extra.font != 'none' %}
       {% set text = 'Ubuntu' %}
       {% if config.extra.font and config.extra.font.text %}
